# My_Projects

./: README.md
KNR/AR_to_pos/: package.xml  setup.cfg  setup.py
KNR/KNR-Keyboard-Detection-ros_implementation/: README.md
KNR/ROS 2 tutorial/bag_files/rosbag2_2025_03_10-13_04_30/: metadata.yaml  rosbag2_2025_03_10-13_04_30_0.db3
KNR/ROS 2 tutorial/bag_files/subset/: metadata.yaml  subset_0.db3
KNR/ROS 2 tutorial/ros2_ws/install/: local_setup.sh  setup.sh
c++/: ONP.cpp  QS.cpp  adoechor.cpp  anagramy.cpp  bierki.cpp  bisekcja.cpp  chincicy.cpp  ciacha.cpp  ciapongi.cpp  czy w wiel.cpp  dijkstra.cpp  domki.cpp  eksperyment.cpp  emeryci.cpp  fajkowe.cpp  gornicy2.cpp  gra w życie.cpp  grotesk.cpp  górnicy.cpp  hasz_fragmentu.cpp  hectakill.cpp  hierplast.cpp  hurtownia.cpp  hyperloob.cpp  japka.cpp  jezyny.cpp  kolo.cpp  kraw.cpp  krawe.cpp  krazki.cpp  kurwasrednia.cpp  labirynt.cpp  max.cpp  mon.cpp  mosty.cpp  mury.cpp  najdl.cpp  najniezmęczenie.cpp  nawd.cpp  nil.cpp  (+48 more)
c++/CSES/Problem Set/: ConvexHull.cpp  MissingNumber.cpp  Permutations.cpp  PolygonLatticePoints.cpp  TwoSets.cpp
c++/Codeforces/Codeforces Round 890 (Div. 2)/: C.cpp
c++/Codeforces/Codeforces Round 891/: C.cpp
c++/Codeforces/Codeforces Round 895 (Div. 3)/: D.cpp
c++/Codeforces/Codeforces Round 900 (Div. 3)/: B.cpp  F.cpp
c++/Codeforces/Educational Codeforces Round 151/: 1.cpp  6.cpp
c++/Codeforces/Pinely Round 2 (Div. 1 + Div. 2)/: B.cpp  D.cpp  E.cpp
c++/OI_2020/: sorts.cpp  zad_3(lic).cpp
c++/oi2021/: chineses.cpp  domino.cpp  druk.cpp  karty.cpp  kat2.cpp
chosen uni projects/First python project (library manegment app)/: README.md  book.py  database.py  errors.py  global_variables.py  main.py  plot.py  requirements.txt  strings_and_messages.py  user.py
chosen uni projects/First python project (library manegment app)/.pytest_cache/: .gitignore
chosen uni projects/First python project (library manegment app)/tests/: test_book.py  test_database.py  test_user.py
chosen uni projects/Fuzzy Controllers/Projekt 1/: zadanie1.m  zadanie2.m  zadanie3.m
chosen uni projects/Introduction to artificial intelligence/zad_2/: evolution.py  main.py  plot3d.py  plot_error.py
chosen uni projects/Introduction to artificial intelligence/zad_3/: alpha_beta.py  main.py  min_max.py  plot_results.py  tic_tac_toe.py
chosen uni projects/Introduction to artificial intelligence/zad_4/: my_approach.py
chosen uni projects/Introduction to artificial intelligence/zad_6/: Qlearning.py  example_usage.py  main.py  tester.py
chosen uni projects/Introduction to artificial intelligence/zad_7/: my_approach.py  plot_results.py
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/manipulation/pick_place/: CMakeLists.txt  package.xml
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/manipulation/pick_place/src/: pick_place.cpp  pick_place_2.cpp  pick_place_vis.cpp
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/manipulation/tiago_lab2/: CMakeLists.txt  package.xml
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/manipulation/tiago_lab2/config/: my_config.rviz
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/manipulation/tiago_lab2/launch/: pal_gazebo.launch.py  tiago_gazebo.launch.py  tiago_nav_bringup.launch.py
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/manipulation/tiago_lab2/src/: frame_checker.cpp
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/manipulation/tiago_lab2/worlds/: stero.world
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/navigation/nav_lab1/: CMakeLists.txt
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/navigation/nav_lab1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/navigation/nav_lab1/install/nav_lab1/lib/nav_lab1/: odometry_info
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/navigation/nav_lab1/install/nav_lab1/share/ament_index/resource_index/parent_prefix_path/: nav_lab1
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/navigation/nav_lab1/install/nav_lab1/share/nav_lab1/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/navigation/nav_lab1/log/: latest_build
chosen uni projects/ROS and GAZEBO beginnings/GAZEBO beginings/navigation/nav_lab1/src/: odometry_info.cpp  piaciokotforemny.cpp
chosen uni projects/ROS and GAZEBO beginnings/first ROS encounters/LAB5/lab5_pd/lab3_pd/: package.xml  setup.cfg  setup.py
chosen uni projects/ROS and GAZEBO beginnings/first ROS encounters/LAB5/lab5_pd/lab3_pd/launch/: FkDisplay.launch.py
chosen uni projects/first c++ project (MP3 simulator)/CMakeQuickStart/: CMakeLists.txt  main.cpp
chosen uni projects/first c++ project (MP3 simulator)/CMakeQuickStart/Player/: player.json
chosen uni projects/first c++ project (MP3 simulator)/CMakeQuickStart/src/: CMakeLists.txt  battery.cpp  battery.hpp  interface.cpp  interface.hpp  memory.cpp  memory.hpp  player.cpp  player.hpp  playlist.cpp  playlist.hpp  song.cpp  song.hpp
chosen uni projects/first c++ project (MP3 simulator)/CMakeQuickStart/test/: CMakeLists.txt  test_battery.cpp  test_battery_json.cpp  test_memory.cpp  test_playlist.cpp  test_song.cpp
highschool/HighSchoolAlgorithmics/: (K, N)-Skoczek [B].cpp  .gitignore  akcje.cpp  bakt.cpp  balon.cpp  bankomaty.cpp  bateria.cpp  berlin.cpp  biz.cpp  bracia.cpp  cośtam.cpp  czekolada.cpp  czydrzewo.cpp  czyscioch.cpp  deszyfr płotkowy.cpp  dfs.cpp  dod_2.cpp  dod_pod_2.cpp  działaj.cpp  dzielniki.cpp  faktoryzacja.cpp  farmacjusz.cpp  fibbonaci.cpp  flagi.cpp  gasienica.cpp  glupiezadaniejulki.cpp  greedySnake.cpp  hasz.cpp  hobbit.cpp  inwersje.cpp  jednozn.cpp  kalendarz.cpp  kl.cpp  klasy.cpp  kolejka.cpp  kongruecnje.cpp  korp.cpp  krazzzki.cpp  kwadraty.cpp  las.cpp  (+54 more)
highschool/HighSchoolAlgorithmics/oi2021/: alternacja.cpp  b DZIELNIK.cpp  krasnoludy.cpp  m.cpp
(+233 files in other folders)
