<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tiago_lab2</name>
  <version>0.0.0</version>
  <description>Launch files, configs and worlds for the Tiago lab 2 exercises (custom navigation and RViz setups).</description>
  <maintainer email="michal11paradowski@gmail.com">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime / build dependencies used by the launch files -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>launch_pal</depend>
  <depend>ament_index_python</depend>
  <depend>tiago_description</depend>
  <depend>tiago_2dnav</depend>
  <depend>pal_maps</depend>
  

  <depend>moveit_visual_tools</depend>
	<depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rviz_visual_tools</depend>
  
  <depend>nav2_bringup</depend>
  <depend>pal_nav2_bringup</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
