<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab3_pd</name>
  <version>0.0.0</version>
  <description>Launches a Dobot URDF with RViz</description>
  <maintainer email="mparadow@todo.todo">mparadow</maintainer>
  <license>MIT</license>

  <!-- Build tools and test dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf-transformations</exec_depend>
  <test_depend>pytest</test_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclpy</exec_depend> <!-- If you write your own Python ROS nodes later -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
